Fix spacing

--- a/src/resources/postcss/views/month/_day.pcss
+++ b/src/resources/postcss/views/month/_day.pcss
@@ -79,7 +79,7 @@
 
 		@media (--viewport-medium) {
 			display: block;
-			padding: 0 var(--spacer-1);
+			padding: 0 var(--spacer-2) var(--spacer-2);
 		}
 	}
 }
